# macos-loginitems

./: .gitignore  Cargo.toml  README.md
examples/: loginitems_parser.rs
src/: error.rs  lib.rs  loginitems.rs  loginitems_plist.rs  parser.rs  size.rs
tests/: loginitems_test.rs
