[package]
name = "macos-loginitems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = "1.3.1"
serde = {version="1.0.136", features = ["derive"]}
nom = "7.1.0"
serde_json = "1.0.79"
log = "0.4.14"
macos-bookmarks = {git = "https://github.com/puffyCid/macos-bookmarks", rev="9252234"}

[dev-dependencies]
csv = "1.1.6"
simplelog = "0.12.0"